# leaky_thoughts

./: .gitignore  LICENSE  README.md  approp_matrix.csv  eval_agentdam.sh  eval_cp.py  generate_utils.py  pyproject.toml
agentdam/: README_agentdam.md  models.csv  prepare.sh  privacy_eval.py  run_agentdam.py
agentdam/configs/: p_cot_id_actree_3s.json  p_cot_id_actree_4s_privacy.json  p_cot_privacy_judge_3s.json  p_cot_privacy_judge_3s_reasoning.json  p_reasoning_id_actree_4s_privacy.json  p_som_cot_id_actree_3s.json  p_som_cot_id_actree_4s_privacy.json  p_vanilla_id_actree_4s_privacy.json
agentdam/llama3x/: run_llama3_vllm_localhost.sh
chat_templates/rana/: deepseek-ai_DeepSeek-R1-Distill-Llama-8B.jinja  deepseek-ai_DeepSeek-R1.jinja
injections/: repeat_reasoning.txt  repeat_sys_prompt.txt
openrouter_settings/: default_settings.json  no_order.json
prompts/cp_open_ended_chat/: cot_explicit_unk.txt  situation_template.txt  vanilla.txt
visualwebarena/: package-lock.json  run_homepage.sh
visualwebarena/agent/: agent.py
visualwebarena/agent/prompts/: prompt_constructor.py
visualwebarena/environment_docker/: reset_dockers.sh  start_dockers.sh
visualwebarena/llms/: __init__.py  lm_config.py  tokenizers.py  utils.py
visualwebarena/llms/providers/: openrouter_utils.py  vllm_utils.py
