[project]
name = "leaky_thoughts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.8"
dependencies = [
    "chardet>=5.2.0",
    "chromadb>=0.6.3",
    "flagembedding>=1.3.4",
    "gdown>=5.2.0",
    "hf-transfer>=0.1.9",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nltk>=3.9.1",
    "openai>=1.60.2",
    "python-dotenv==1.0.0",
    "sentence-transformers>=3.4.1",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "matplotlib>=3.10.1",
    "vllm==0.8.5.post1",
    "chainforge>=0.3.4.3",
    "huggingface-hub[cli]>=0.28.1",
    "rich[jupyter]>=13.9.4",
    "plotly>=6.0.0",
    "kaleido==0.2.0",
    "rouge-score>=0.1.2",
    "together>=1.5.2",
    "anthropic>=0.49.0",
    "beautifulsoup4>=4.12.3",
    "pydantic>=1.9.0",
    "tqdm>=4.67.1",
    "streamlit>=1.44.0",
    "numpy==1.25.2",
    "scipy>=1.15.2",
    "fire>=0.7.0",
    "tiktoken>=0.8.0",
    "wikipedia>=1.4.0",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
    "seaborn>=0.13.2",
    "bitsandbytes>=0.45.4",
    "sentencepiece>=0.2.0",
    "langchain==0.0.277",
    "langchain-community>=0.0.20",
    "tenacity>=8.5.0",
    "mpld3>=0.5.10",
    "ipympl>=0.9.7",
    "pyqt5>=5.15.11",
    "mplcursors>=0.6",
    "flashinfer-python==0.2.2",
    "ninja>=1.11.1.4",
    "num2words>=0.5.14",
    "pudb>=2025.1",
    "aiolimiter>=1.2.1",
    "beartype>=0.21.0",
    "evaluate>=0.4.3",
    "flask>=3.1.0",
    "google-cloud-aiplatform>=1.94.0",
    "gymnasium>=1.1.1",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "playwright==1.37.0",
    "protobuf>=4.25.7",
    "py>=1.11.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=1.0.0",
    "requests>=2.32.3",
    "setuptools>=75.8.0",
    "scikit-image>=0.25.2",
    "text-generation>=0.7.0",
    "webarena",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "flashinfer-cu124"
url = "https://flashinfer.ai/whl/cu124/torch2.6"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
webarena = { path = "visualwebarena", editable = true }
